js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2a.3.kt
fun funA() = listOf(fun1()).joinToString()
